Dibuat menggunakan Colab

--- a/Praktikum1/SimpleLinearRegression.ipynb
+++ b/Praktikum1/SimpleLinearRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtkks/eLtt+DcKNYHVxdV+",
+      "authorship_tag": "ABX9TyOG3k7MCOnzuHo/sdjNh0u9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/KevinAndT25/DIF62130_A_25_2311532005/blob/main/Praktikum1/SimpleLinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/KevinAndT25/DIF62130_A_25_2311532005_KevinAndhika/blob/main/Praktikum1/SimpleLinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -333,6 +333,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Mengimpor library pandas.\n",
+        "Membuat dataset sederhana dengan luas tanah (dalam m²) sebagai fitur dan harga tanah (dalam dollar) sebagai target.\n",
+        "Menyimpan data dalam bentuk DataFrame df untuk manipulasi lebih lanjut."
+      ],
+      "metadata": {
+        "id": "Yxsduf9cJpLd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -354,7 +365,7 @@
         "id": "e13mYmjYNquF",
         "outputId": "99690b17-c6b8-4a2b-81dc-32397eac0b52"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -367,6 +378,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mengimpor matplotlib.pyplot untuk plotting.\n",
+        "Membuat scatter plot antara luas tanah dan harga tanah.\n",
+        "Menambahkan label, batas sumbu, serta grid agar lebih mudah dibaca."
+      ],
+      "metadata": {
+        "id": "B4cxT5F2KJ7M"
+      }
     },
     {
       "cell_type": "code",
@@ -386,7 +408,7 @@
         "id": "EjIq78uHRR0P",
         "outputId": "5832ba13-ae20-481d-cfe0-06d5c845a41e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,6 +419,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mengimpor numpy untuk operasi numerik.\n",
+        "Mengonversi kolom luas menjadi array x dan harga menjadi array y agar dapat digunakan untuk perhitungan regresi."
+      ],
+      "metadata": {
+        "id": "LsJXn-l_KPzp"
+      }
     },
     {
       "cell_type": "code",
@@ -413,7 +445,7 @@
         "id": "7MhAHKgnR8kx",
         "outputId": "9f20e3fd-487a-4846-f1c9-a9b44019bf88"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,6 +460,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mengubah bentuk array x dari 1D menjadi 2D ((-1,1)) agar bisa digunakan dalam model scikit-learn.\n",
+        "Ini diperlukan karena scikit-learn mengharapkan data berbentuk (jumlah_sampel, jumlah_fitur).\n"
+      ],
+      "metadata": {
+        "id": "c-Dqhz0CKT--"
+      }
     },
     {
       "cell_type": "code",
@@ -445,7 +487,7 @@
         "id": "TNrzv5sHSmuR",
         "outputId": "3ea3e64c-9870-4290-c1c7-6b133512c764"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,6 +920,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Mengimpor LinearRegression dari sklearn.linear_model.\n",
+        "Membuat objek model Linear Regression.\n",
+        "Melatih model menggunakan fit(x, y), di mana x adalah luas tanah dan y adalah harga tanah."
+      ],
+      "metadata": {
+        "id": "ZSxBn6zoKWxl"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "x_vis = np.array([0,25]).reshape(-1, 1)\n",
@@ -886,8 +939,18 @@
       "metadata": {
         "id": "r_SPgx1HSxww"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Membuat nilai x_vis dari 0 hingga 25 untuk menggambar garis regresi.\n",
+        "Menggunakan model.predict(x_vis) untuk mendapatkan prediksi harga tanah berdasarkan regresi."
+      ],
+      "metadata": {
+        "id": "Dfd2FvG7KZte"
+      }
     },
     {
       "cell_type": "code",
@@ -909,7 +972,7 @@
         "id": "Ez5JzXwLTbuo",
         "outputId": "2f91a0af-4ad5-4f25-d714-c28d1e431869"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -924,6 +987,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Scatter plot menunjukkan titik data asli (luas tanah vs. harga tanah).\n",
+        "Garis merah adalah hasil prediksi model regresi linear.\n",
+        "Visualisasi ini membantu memahami hubungan antara luas tanah dan harga."
+      ],
+      "metadata": {
+        "id": "7nALRQwYKcgQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print (f'intercept: {model.intercept_}')\n",
@@ -936,7 +1010,7 @@
         "id": "osg5iUUnUJzB",
         "outputId": "70923195-277a-45dd-cbc4-80c2a1f01b90"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,6 +1021,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "intercept_ adalah nilai b dalam persamaan regresi:\n",
+        "y=mx+b\n",
+        "di mana m (slope) adalah kemiringan garis dan b (intercept) adalah titik potong dengan sumbu Y.\n",
+        "coef_ menunjukkan seberapa besar harga tanah meningkat untuk setiap tambahan 1 m² luas tanah."
+      ],
+      "metadata": {
+        "id": "knzEQEs0Ke_u"
+      }
     },
     {
       "cell_type": "code",
@@ -962,7 +1048,7 @@
         "id": "V355q-EHUlhs",
         "outputId": "8009f361-0cf0-4ea4-d320-e2f7c6d199fc"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,6 +1072,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Membuat array luas tanah baru yang akan diprediksi harganya.\n",
+        "Merubah bentuk (reshape(-1,1)) agar sesuai dengan format yang diterima model."
+      ],
+      "metadata": {
+        "id": "ho6ywTN2LRjK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "harga_prediksi = model.predict(luas_tanah)\n",
@@ -998,7 +1094,7 @@
         "id": "n6TbLh5oVeyX",
         "outputId": "068f6cbd-7c04-495d-9eab-50d3c1ef4a78"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,6 +1109,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Model melakukan prediksi harga tanah berdasarkan luas tanah yang diberikan sebelumnya (luas_tanah = [12, 15, 20]).\n",
+        "Hasil prediksi akan disimpan dalam harga_prediksi."
+      ],
+      "metadata": {
+        "id": "zuE1ZPqNLU-o"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "for luas, hrg in zip(luas_tanah, harga_prediksi):\n",
@@ -1025,7 +1131,7 @@
         "id": "RlmJ4KDWWz7i",
         "outputId": "d39bd7f2-efe4-4d00-8c8d-6d3aa15a757b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,6 +1145,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Loop ini mencetak hasil prediksi harga tanah untuk setiap nilai luas tanah.\n",
+        "zip(luas_tanah, harga_prediksi) menggabungkan nilai luas tanah dengan hasil prediksi yang sesuai."
+      ],
+      "metadata": {
+        "id": "euQVY9djLW-A"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "x_train = np.array([6, 8, 10, 14, 18]).reshape(-1, 1)\n",
@@ -1050,8 +1166,19 @@
       "metadata": {
         "id": "8k5RUAdEXSUf"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Memisahkan data menjadi training set (x_train, y_train) dan testing set (x_test, y_test).\n",
+        "Training set digunakan untuk melatih model.\n",
+        "Testing set digunakan untuk mengukur performa model."
+      ],
+      "metadata": {
+        "id": "v5P7FKkOLZSL"
+      }
     },
     {
       "cell_type": "code",
@@ -1067,7 +1194,7 @@
         "id": "RRM89EWHX6fc",
         "outputId": "272cb7ae-a176-49e0-ffdf-355ffa135c5c"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,6 +1627,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Membuat ulang model Linear Regression.\n",
+        "Melatih model menggunakan data training (x_train, y_train).\n",
+        "Model ini nantinya akan diuji dengan data testing."
+      ],
+      "metadata": {
+        "id": "XIVyQHdOLbe2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import r2_score\n",
@@ -1515,7 +1653,7 @@
         "id": "61PZhGWqYR66",
         "outputId": "2dc9132a-ad85-4747-b4a1-eaecc5498283"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1525,6 +1663,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "r2_score(y_test, y_pred) menghitung koefisien determinasi (R²).\n",
+        "R² menunjukkan seberapa baik model menjelaskan variasi dalam data.\n",
+        "Nilai 1 berarti prediksi sangat akurat.\n",
+        "Nilai 0 berarti model tidak lebih baik dari tebakan acak."
+      ],
+      "metadata": {
+        "id": "ntDO54SWLdZf"
+      }
     },
     {
       "cell_type": "code",
@@ -1538,7 +1688,7 @@
         "id": "D1JbS_pzYxRd",
         "outputId": "d59e2cbf-6c54-4d16-d0c6-21f3a363068a"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1551,6 +1701,15 @@
           "execution_count": 55
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Menampilkan hasil prediksi harga tanah berdasarkan data testing."
+      ],
+      "metadata": {
+        "id": "zWGT1VshLfdW"
+      }
     }
   ]
 }
