Dibuat menggunakan Colab

--- a/Praktikum1/LinearRegression.ipynb
+++ b/Praktikum1/LinearRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrW7ARXhdXeGEN8KbGUv++",
+      "authorship_tag": "ABX9TyP7+I7Rd7ldo4Gm8x2G2DZQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/KevinAndT25/DIF62130_A_25_2311532005/blob/main/Praktikum1/LinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/KevinAndT25/DIF62130_A_25_2311532005_KevinAndhika/blob/main/Praktikum1/LinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "vDmER1pzbGy0"
       },
@@ -52,6 +52,15 @@
         "from sklearn.metrics import mean_squared_error\n",
         "from sklearn.datasets import fetch_california_housing"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mengimpor pustaka yang diperlukan untuk manipulasi data (pandas, numpy), visualisasi (matplotlib), serta preprocessing dan pemodelan dengan sklearn."
+      ],
+      "metadata": {
+        "id": "vhNwouUjPCSs"
+      }
     },
     {
       "cell_type": "markdown",
@@ -82,7 +91,7 @@
         "id": "ZGPxNL6NcVb6",
         "outputId": "53ad3952-68b0-44dc-c75f-885dbd8c3218"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,6 +429,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Mengambil dataset California Housing dari sklearn.\n",
+        "Mengonversi dataset menjadi DataFrame pandas dengan fitur sebagai kolom.\n",
+        "Menambahkan kolom target MedHouseValue, yaitu harga rumah dalam ratusan ribu dolar.\n",
+        "Memisahkan kolom target (MedHouseValue) dari dataset.\n",
+        "inputs berisi semua fitur kecuali target."
+      ],
+      "metadata": {
+        "id": "3kcrQZgRPFjQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.describe()"
@@ -432,7 +454,7 @@
         "id": "8VELcVKaeD9T",
         "outputId": "3a0283b9-9227-4df6-dca6-f47a40331978"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -811,6 +833,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "df.describe() memberikan statistik ringkasan."
+      ],
+      "metadata": {
+        "id": "tiOTfBykPH2L"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.info()"
@@ -822,7 +853,7 @@
         "id": "b_bB1oN0ePsC",
         "outputId": "08f3e6f1-fbbc-463d-a99d-6ec6067da289"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,6 +880,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "df.info() menampilkan tipe data tiap kolom dan jumlah nilai non-null."
+      ],
+      "metadata": {
+        "id": "Kn-3E0UVRff6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "QhhbgbC2Rajs"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(f'dataframe : {df.shape}')"
@@ -860,7 +907,7 @@
         "id": "XxQiJOUHeSd2",
         "outputId": "3825334f-711d-48be-ad8c-469061a2568f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,6 +917,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "df.shape menunjukkan jumlah baris dan kolom."
+      ],
+      "metadata": {
+        "id": "c3zoftERRg6w"
+      }
     },
     {
       "cell_type": "markdown",
@@ -895,7 +951,7 @@
         "id": "KmbCb7nmehAB",
         "outputId": "13629286-0c11-4f45-fb73-990376986c9f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,6 +962,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "train_test_split() digunakan untuk membagi dataset menjadi 70% data latih dan 30% data uji.\n",
+        "Parameter random_state=1 memastikan hasil pembagian selalu sama saat kode dijalankan ulang."
+      ],
+      "metadata": {
+        "id": "VtI-rctcR4zm"
+      }
     },
     {
       "cell_type": "code",
@@ -922,7 +988,7 @@
         "id": "dlh8mAomfv5L",
         "outputId": "b7c31851-7169-4f62-fb2a-c046675ef3ef"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,6 +1014,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "MinMaxScaler() digunakan untuk menskalakan fitur ke dalam rentang [0,1].\n",
+        "fit_transform() digunakan pada data latih, sedangkan transform() diterapkan pada data uji dengan skala yang sama."
+      ],
+      "metadata": {
+        "id": "qrpPjbduR6wf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **MODELLING**"
       ],
       "metadata": {
@@ -968,7 +1044,7 @@
         "id": "nlPMsa6MgmPH",
         "outputId": "90646db7-2a5c-423e-b55c-6deff6a6e867"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1401,6 +1477,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "LinearRegression() digunakan untuk membuat model regresi linear.\n",
+        "Model dilatih dengan metode Ordinary Least Squares (OLS) menggunakan fit()."
+      ],
+      "metadata": {
+        "id": "0Fyd4A_NR89W"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(f'intercept : {lr_model.intercept_}')\n",
@@ -1413,7 +1499,7 @@
         "id": "-1Ug0VlSgtfB",
         "outputId": "8e65d930-ecee-4cfe-c03d-120cc8163836"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1425,6 +1511,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Intercept (lr_model.intercept_) adalah nilai harga rumah ketika semua fitur bernilai nol.\n",
+        "Slope (lr_model.coef_) adalah koefisien regresi untuk masing-masing fitur."
+      ],
+      "metadata": {
+        "id": "VOR2-XTdR_GY"
+      }
     },
     {
       "cell_type": "code",
@@ -1442,7 +1538,7 @@
         "id": "3YCOVEPshUCL",
         "outputId": "0f0f4b40-29eb-4e0a-f571-7f04f0be301b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1453,6 +1549,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "predict() digunakan untuk memprediksi harga rumah berdasarkan data uji.\n",
+        "mean_squared_error() menghitung Mean Squared Error (MSE), yang menunjukkan rata-rata kesalahan kuadrat antara nilai aktual dan prediksi.\n",
+        "r2_score() mengukur koefisien determinasi (R²), yang menunjukkan seberapa baik model menjelaskan variasi dalam data."
+      ],
+      "metadata": {
+        "id": "KKWgcqA5SBEf"
+      }
     },
     {
       "cell_type": "code",
@@ -1471,7 +1578,7 @@
         "id": "D1URSESXiwX5",
         "outputId": "77ae5e4b-4372-456f-d4ba-72457edbbd15"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1486,6 +1593,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Grafik scatter digunakan untuk membandingkan nilai aktual vs nilai prediksi.\n",
+        "Jika model bekerja dengan baik, titik-titik akan mendekati garis diagonal\n",
+        "y=x."
+      ],
+      "metadata": {
+        "id": "4mZeg1W5SKDv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pickle\n",
@@ -1496,8 +1614,17 @@
       "metadata": {
         "id": "Kke31rZwjpa1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "pickle digunakan untuk menyimpan model ke dalam file .sav, sehingga bisa digunakan kembali tanpa perlu melatih ulang."
+      ],
+      "metadata": {
+        "id": "1sVo7u_wSOLK"
+      }
     }
   ]
 }
