Dibuat menggunakan Colab

--- a/Praktikum2/LogisticRegression.ipynb
+++ b/Praktikum2/LogisticRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTjjecdobEyOyAJHM6fwWC",
+      "authorship_tag": "ABX9TyN05oUis8rwz/ySAbRxMCJ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -393,6 +393,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Mengimport library yang akan digunakan dalam regresi logistik ini dan mengambil dataset diabetes.csv dari repository github."
+      ],
+      "metadata": {
+        "id": "0-EshABD3l5S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **SELECTING FEATURES**"
       ],
       "metadata": {
@@ -409,8 +418,17 @@
       "metadata": {
         "id": "Axo918v-RBzo"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Menentukan fitur yang akan digunakan untuk prediksi dengan variabel X berisi data fitur (input), sedangkan y berisi label output (1: diabetes, 0: tidak diabetes).\n"
+      ],
+      "metadata": {
+        "id": "XZUqXtZP4BKi"
+      }
     },
     {
       "cell_type": "code",
@@ -425,7 +443,7 @@
         "id": "gqH864JZRtTd",
         "outputId": "1c25386d-dcbb-4cd3-cbfc-502757982b06"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,6 +454,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Memastikan jumlah baris dan kolom pada X (fitur) dan y (label)."
+      ],
+      "metadata": {
+        "id": "OjVICsTe4PZa"
+      }
     },
     {
       "cell_type": "markdown",
@@ -455,8 +482,17 @@
       "metadata": {
         "id": "IBvOkNUvSTtX"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Memisahkan dataset menjadi 70% data latih dan 30% data uji dan random_state=16 untuk memastikan hasil pembagian tetap sama setiap kali kode dijalankan."
+      ],
+      "metadata": {
+        "id": "ueKj53Db4ZE5"
+      }
     },
     {
       "cell_type": "markdown",
@@ -484,7 +520,7 @@
         "id": "EpsiSaB9S-NU",
         "outputId": "bd4f48d6-4622-4077-d228-ff193ab1b00f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,6 +537,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Import library LogisticRegression Lalu buat model regresi logistik (logreg).\n",
+        "Kemudian data akan dilatih dan diuji."
+      ],
+      "metadata": {
+        "id": "ALEQ0M554hFR"
+      }
     },
     {
       "cell_type": "markdown",
@@ -526,7 +572,7 @@
         "id": "g5K1edy2Uk-9",
         "outputId": "6c594d6b-0a83-4938-8848-6b906ed888aa"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,6 +586,16 @@
           "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Menghitung Confusion Matrix untuk mengevaluasi kemampuan model.\n",
+        "Confusion Matrix akan menunjukkan jumlah prediksi benar dan salah dalam setiap kelas (diabetes/tidak diabetes)."
+      ],
+      "metadata": {
+        "id": "3IrB44Gc47_B"
+      }
     },
     {
       "cell_type": "code",
@@ -569,7 +625,7 @@
         "id": "J-BK2DIsVynw",
         "outputId": "9e897cd1-6344-4b84-daa1-2865c36ce8d0"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,6 +652,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Memvisualisasikan jumlah prediksi yang benar dan salah dalam bentuk Heatmap.\n",
+        "Sumbu X: Label yang diprediksi\n",
+        "Sumbu Y: Label sebenarnya"
+      ],
+      "metadata": {
+        "id": "7dE_IOyY5E_n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **CONFUSION MATRIX EVALUATION METRIC**"
       ],
       "metadata": {
@@ -617,7 +684,7 @@
         "id": "rV07g0jRYRbw",
         "outputId": "2976abe4-a8c6-49a2-be12-b6cb8921efdb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +706,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **ROC CURVE**"
+        "Menampilkan precision, recall, f1-score, dan support untuk masing-masing kelas.\n",
+        "classification_report() memberikan ringkasan kinerja model berdasarkan Confusion Matrix."
+      ],
+      "metadata": {
+        "id": "F48oIi-A5Pfe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **ROC CURVE & AREA UNDER CURVE**"
       ],
       "metadata": {
         "id": "Ww1XVFftaWDu"
@@ -663,7 +740,7 @@
         "id": "ve77KMl9aZRC",
         "outputId": "89ed77b2-c254-421b-b52f-089785ea31b7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -680,10 +757,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **AREA UNDER CURVE**"
+        "Menghitung probabilitas prediksi kemudian membuat ROC Curve untuk mengevaluasi performa model dalam membedakan kelas positif dan negatif.\n",
+        "AUC (Area Under Curve): Nilai antara 0-1, semakin mendekati 1 maka akan semakin baik."
       ],
       "metadata": {
-        "id": "cYoHtE21b5G_"
+        "id": "6pnV8pgn5Tts"
       }
     }
   ]
