--- a/Praktikum3/NaiveBayesModel.ipynb
+++ b/Praktikum3/NaiveBayesModel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNajluxDHJCp15LqASaTSp4",
+      "authorship_tag": "ABX9TyNiT3b2pojzqaHUpNAFNgCY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -712,6 +712,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **ONE-HOT ENCODE**"
+      ],
+      "metadata": {
+        "id": "D204TMkdjiER"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#One-hot encode\n",
@@ -1086,6 +1095,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **SPLIT DATA**"
+      ],
+      "metadata": {
+        "id": "ctHi4PlYjpyj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X, y = df.drop(columns='Play'), df['Play']\n",
@@ -1421,6 +1439,15 @@
           "execution_count": 33
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **EVALUATION METRIC**"
+      ],
+      "metadata": {
+        "id": "yB7G8CJhkEy_"
+      }
     },
     {
       "cell_type": "code",
